--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "recoil": "^0.7.6",
     "redux": "^4.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "zustand": "^4.2.0"
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.25",
