--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "zustand": "^4.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
     "@types/react-redux": "^7.1.25",
     "autoprefixer": "^10.4.13",
+    "babel-loader": "^8.3.0",
+    "eslint-plugin-storybook": "^0.6.8",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   }
